fix :: 근처 관공서 조회 로직 수정