@@ -4,14 +4,13 @@ import com.danpoong.onchung.domain.public_office.domain.PublicOffice;
 import com.danpoong.onchung.domain.public_office.dto.FindAroundPublicOfficeRequest;
 import com.danpoong.onchung.domain.public_office.dto.FindAroundPublicOfficeResponse;
 import com.danpoong.onchung.domain.public_office.repository.PublicOfficeRepository;
-import com.danpoong.onchung.global.map.api.KakaoMap;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,27 +18,23 @@ import java.util.List;
 @Slf4j
 public class PublicOfficeService {
     private final PublicOfficeRepository publicOfficeRepository;
-    private final KakaoMap kakaoMap;
 
     // 띄운 맵의 범위 안 관공서 조회
     public List<FindAroundPublicOfficeResponse> findAroundPublicOffice(FindAroundPublicOfficeRequest request) {
-        // 맵 중앙 좌표를 통해 1차 필터링을 위한 도, 시 정보 확보
-        String[] middleCoordinate = request.middleCoordinate();
-        String[] userStateAndCity = getStateAndCityFromCoordinate(middleCoordinate[0], middleCoordinate[1]);
-        log.info(Arrays.toString(userStateAndCity));
+        double leftBottomLongitude = Double.parseDouble(request.leftBottomLongitude());
+        double rightTopLongitude = Double.parseDouble(request.rightTopLongitude());
+        double leftBottomLatitude = Double.parseDouble(request.leftBottomLatitude());
+        double rightTopLatitude = Double.parseDouble(request.rightTopLatitude());
 
-        // 1차 필터링
-        List<PublicOffice> publicOffices = firstFilteringPublicOffice(userStateAndCity[0], userStateAndCity[1]);
-        log.info(publicOffices.toString());
+        List<PublicOffice> offices = publicOfficeRepository.findInArea(
+                leftBottomLongitude, rightTopLongitude, leftBottomLatitude, rightTopLatitude
+        );
 
-        // 범위 안의 관공서만 반환
-        return publicOffices.stream()
-                .filter(office -> Double.parseDouble(office.getLongitude()) > Double.parseDouble(request.leftBottomLongitude()) &&
-                        Double.parseDouble(office.getLongitude()) < Double.parseDouble(request.rightTopLongitude()) &&
-                        Double.parseDouble(office.getLatitude()) > Double.parseDouble(request.leftBottomLatitude()) &&
-                        Double.parseDouble(office.getLatitude()) < Double.parseDouble(request.rightTopLatitude()))
+        log.info(offices.toString());
+
+        return offices.stream()
                 .map(this::changeFindAroundPublicOffice)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     // 관공서 주소를 정할 때 사용할 예정 - 데이터 전처리 용도
@@ -63,30 +58,6 @@ public class PublicOfficeService {
 //            );
 //        });
 //    }
-
-
-
-    private String[] getStateAndCityFromCoordinate(String longitude, String latitude) {
-        return kakaoMap.getAdminDistrict(longitude, latitude).getStateAndCityName();
-    }
-
-    private List<PublicOffice> firstFilteringPublicOffice(String state, String city) {
-        List<PublicOffice> publicOffices = publicOfficeRepository.findAll();
-        log.info(publicOffices.toString());
-
-        return publicOfficeRepository.findAll()
-                .stream()
-                .filter(location -> {
-                    if (location.getCity().isEmpty()) {
-                        return location.getState().contains(state);
-                    } else {
-                        boolean stateCheck = location.getState().contains(state);
-                        boolean cityCheck = city.isEmpty() || location.getCity().contains(city);
-
-                        return stateCheck && cityCheck;
-                    }
-                }).toList();
-    }
 
     private FindAroundPublicOfficeResponse changeFindAroundPublicOffice(PublicOffice office) {
         return FindAroundPublicOfficeResponse.builder()
